      statement handle attribute, to allow processing a SQL dump.
      (ISHIGAKI)
    - Resolved #53579: Added a note and a test of placeholders.
      (ISHIGAKI)
    - Resolved #45113, which was actually an issue of dequoting
      primary key column names (ISHIGAKI)
    - You can now retrieve some of the statement handle attributes
      before you execute. (ISHIGAKI)

1.29 Fri  8 Jan 2010
    - Updated to SQLite 3.6.22 (DUNCAND)

1.28_02 Sun  3 Jan 2010
    - Now empty (or comment only) statements won't cause segv
      or "not an error" errors. Spotted by TOKUHIROM. (ISHIGAKI)
    - Resolved #52573: previous fix always turned on the AutoCommit
      flag; it goes along with the behavior of the internal library
      but broke compat. (ISHIGAKI)
    - Removed the SQLITE_CORE and SQLITE_PRT_SZ flags at the recommendation
      of the SQLite mailing list. (ADAMK)

1.28_01 Tue 22 Dec 2009
    - Updated to SQLite 3.6.21 (ISHIGAKI)
    - Silence warnings on HP-UX (HMBRAND)
    - Resolved #52573: Manual Transaction handling seems to be
      broken (hopefully) (ISHIGAKI)

1.27 Mon 23 Nov 2009
    - Switching to a production version

1.26_07 Sun 15 Nov 2009
    *** CHANGES THAT MAY POSSIBLY BREAK YOUR OLD APPLICATIONS ***
    - Foreign keys support is once again disabled by default.
      It seems to have a greater impact than we expected and
      it actually broke things. This feature probably will be
      enabled by default by the sqlite team in the future, and
      eventually you'll need to cope with it, but right now we
      agreed with some discussion to give you more time to be
      prepared. If you use referential stuff in your schema
      (which sqlite ignores now) should do extensive testing
      to ensure that they will work when you issue "PRAGMA
      foreign_keys = ON". (ISHIGAKI)

    - Updated to SQLite 3.6.20 (DUNCAND)
    - Resolved #50935: there remained old "unicode" attribute usage
      in the pod, spotted by ASHLEY. (ISHIGAKI)
