@@ -1591,6 +1591,29 @@ I<requests> for collations. In other words, if you want to change
 the behaviour of a collation within an existing C<$dbh>, you
 need to call the L</create_collation> method directly.
 
+=head1 FOR DBD::SQLITE EXTENSION AUTHORS
+
+Since 1.30_01, you can retrieve the bundled sqlite C source and/or
+header like this:
+
+  use DBD::SQLite::sqlite3_h;
+  use DBD::SQLite::sqlite3_c;
+  
+  # the whole sqlite3_h header
+  my $sqlite3_h = DBD::SQLite::sqlite3_h->get;  # the whole header
+  
+  # or only a particular header, amalgamated in sqlite3.c
+  my $parse_h = DBD::SQLite::sqlite3_c->get('parse.h');
+  
+  # you even write it to a file (if 'include' directory exists).
+  DBD::SQLite::sqlite3_c->get('parse.h' => 'include/parse.h');
+
+You usually want to use this feature in your extension's C<Makefile.PL>,
+and you may want to add DBD::SQLite to your extension's C<CONFIGURE_REQUIRES>
+to allow your extension users to use the same C source/header they
+use to build DBD::SQLite itself (instead of the ones installed
+in their system).
+
 =head1 TO DO
 
 The following items remain to be done.
